# ArucoUnity

./: .appveyor.yml  .editorconfig  .gitattributes  .gitignore  ArucoUnity.Editor.csproj  ArucoUnity.csproj  ArucoUnity.sln  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  CMakeLists.txt  LICENSE  LICENSE.md  README.md  docfx.json  index.html  index.json  index.md  manifest.json  toc.html  xrefmap.yml
ArucoUnityPlugin/: CMakeLists.txt
Documentation/: docfx.json  filterConfig.yml  manifest.json  xrefmap.yml
ProjectSettings/: ProjectSettings.asset
api/: .manifest  ArucoUnity.Calibration.ArucoCameraCalibration.html  ArucoUnity.Calibration.ArucoCameraCalibration.yml  ArucoUnity.Calibration.ArucoCameraCalibrationGUI.html  ArucoUnity.Calibration.ArucoCameraCalibrationGUI.yml  ArucoUnity.Calibration.ArucoCameraCalibrationGeneric-2.html  ArucoUnity.Calibration.ArucoCameraCalibrationGeneric-2.yml  ArucoUnity.Calibration.CalibrationFlags.html  (+239 more)
doc/: CMakeLists.txt  Doxyfile.in
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  README.html  _aruco_board_8cs.html  _aruco_calibrator_8cs.html  _aruco_calibrator_canvas_display_8cs.html  _aruco_camera_8cs.html  _aruco_camera_canvas_display_8cs.html  _aruco_camera_webcam_8cs.html  _aruco_charuco_board_8cs.html  _aruco_charuco_board_tracker_8cs.html  _aruco_creator_8cs.html  _aruco_diamond_8cs.html  _aruco_diamond_tracker_8cs.html  _aruco_grid_board_8cs.html  _aruco_grid_board_tracker_8cs.html  _aruco_marker_8cs.html  _aruco_marker_tracker_8cs.html  _aruco_object_8cs.html  _aruco_object_detector_8cs.html  _aruco_object_displayer_8cs.html  _aruco_object_tracker_8cs.html  _aruco_objects_controller_8cs.html  _aruco_tracker_8cs.html  _aruco_unity_8cs.html  _aruco_unity_package_8cs.html  _board_8cs.html  _calib3d_8cs.html  _calib3d_fisheye_8cs.html  _calibrate_camera_board_8cs.html  _calibrate_camera_board_charuco_8cs.html  _calibration_flags_controller_8cs.html  _calibration_flags_fisheye_controller_8cs.html  _calibration_flags_omnidir_controller_8cs.html  _calibration_flags_pinhole_controller_8cs.html  _camera_device_8cs.html  _camera_device_canvas_display_8cs.html  _camera_device_controller_8cs.html  _camera_device_markers_detector_8cs.html  (+622 more)
docs/api/: .manifest  ArucoUnity.Calibration.ArucoCameraCalibration.html  ArucoUnity.Calibration.ArucoCameraCalibration.yml  ArucoUnity.Calibration.ArucoCameraCalibrationGUI.html  ArucoUnity.Calibration.ArucoCameraCalibrationGUI.yml  ArucoUnity.Calibration.ArucoCameraCalibrationGeneric-2.html  ArucoUnity.Calibration.ArucoCameraCalibrationGeneric-2.yml  ArucoUnity.Calibration.CalibrationFlags.html  ArucoUnity.Calibration.CalibrationFlags.yml  ArucoUnity.Calibration.CalibrationFlagsGeneric-1.html  ArucoUnity.Calibration.CalibrationFlagsGeneric-1.yml  ArucoUnity.Calibration.Omnidir.OmnidirCameraCalibration.html  ArucoUnity.Calibration.Omnidir.OmnidirCameraCalibration.yml  ArucoUnity.Calibration.Omnidir.OmnidirCameraCalibrationFlags.html  ArucoUnity.Calibration.Omnidir.OmnidirCameraCalibrationFlags.yml  ArucoUnity.Calibration.Omnidir.StereoOmnidirCameraCalibration.html  ArucoUnity.Calibration.Omnidir.StereoOmnidirCameraCalibration.yml  ArucoUnity.Calibration.Omnidir.html  ArucoUnity.Calibration.Omnidir.yml  ArucoUnity.Calibration.Pinhole.PinholeCameraCalibration.html  ArucoUnity.Calibration.Pinhole.PinholeCameraCalibration.yml  ArucoUnity.Calibration.Pinhole.PinholeCameraCalibrationBase-1.html  ArucoUnity.Calibration.Pinhole.PinholeCameraCalibrationBase-1.yml  ArucoUnity.Calibration.Pinhole.PinholeCameraCalibrationFlags.html  ArucoUnity.Calibration.Pinhole.PinholeCameraCalibrationFlags.yml  ArucoUnity.Calibration.Pinhole.StereoPinholeCameraCalibration.html  ArucoUnity.Calibration.Pinhole.StereoPinholeCameraCalibration.yml  ArucoUnity.Calibration.Pinhole.html  ArucoUnity.Calibration.Pinhole.yml  ArucoUnity.Calibration.html  ArucoUnity.Calibration.yml  ArucoUnity.Cameras.ArucoCamera.html  ArucoUnity.Cameras.ArucoCamera.yml  ArucoUnity.Cameras.ArucoCameraController.html  ArucoUnity.Cameras.ArucoCameraController.yml  ArucoUnity.Cameras.ArucoWebcam.html  ArucoUnity.Cameras.ArucoWebcam.yml  ArucoUnity.Cameras.Displays.ArucoCameraDisplay.html  ArucoUnity.Cameras.Displays.ArucoCameraDisplay.yml  ArucoUnity.Cameras.Displays.ArucoCameraDisplayGeneric-2.html  (+201 more)
docs/articles/: aruco-unity-architecture.html  aruco-unity-architecture.md  build-from-sources.html  calibrate-a-camera.html  calibrate-a-camera.md  create-markers.html  create-markers.md  track-markers.html  track-markers.md
docs/manual/: aruco-unity-architecture.html  build-from-sources.html  build-from-sources.md  calibrate-a-camera.html  calibrate-a-camera.md  create-markers.html  create-markers.md  toc.html  toc.yml  track-markers.html  track-markers.md
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  defines_0.js  enums_0.js  (+117 more)
src/aruco_unity_lib/: CMakeLists.txt  aruco_unity.cpp  board.cpp  calib3d.cpp  ccalib.cpp  charuco_board.cpp  core.cpp  detector_parameters.cpp  dictionary.cpp  exception.cpp  grid_board.cpp  imgproc.cpp  mat.cpp  point2f.cpp  point3f.cpp  rect.cpp  scalar.cpp  size.cpp  term_criteria.cpp  vec3d.cpp  vec4i.cpp  vector_double.cpp  vector_int.cpp  vector_mat.cpp  vector_point2f.cpp  vector_point3f.cpp  vector_vec3d.cpp  vector_vec4i.cpp  vector_vector_int.cpp  vector_vector_point2f.cpp  vector_vector_point3f.cpp  vector_vector_vector_point2f.cpp
src/aruco_unity_plugin/: CMakeLists.txt  ccalib.cpp  grid_board.cpp  imgproc.cpp  point3f.cpp  vector_point3f.cpp  vector_vector_int.cpp  vector_vector_vector_point2f.cpp
src/lib/: CMakeLists.txt  aruco_unity.cpp
test/aruco_unity_lib/: CMakeLists.txt  aruco_unity_test.cpp  main.cpp
(+808 files in other folders)
